Implement PropertyGrid and add it in Content and Main window.

--- a/MCS/MCS.csproj
+++ b/MCS/MCS.csproj
@@ -93,6 +93,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Controls\PropertyGrid.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Dialogs\ExtendedMessageBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -109,6 +113,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Controls\NumberBox.cs" />
+    <Compile Include="Controls\PropertyGrid.xaml.cs">
+      <DependentUpon>PropertyGrid.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\PropertyGridItem.cs" />
     <Compile Include="Dialogs\ExtendedMessageBox.xaml.cs">
       <DependentUpon>ExtendedMessageBox.xaml</DependentUpon>
     </Compile>
@@ -233,6 +242,7 @@
   <ItemGroup>
     <Resource Include="Images\ContentWindow\clear.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
