--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="Managers\SceneManager.cpp" />
     <ClCompile Include="Renderers\IrrRenderer.cpp" />
     <ClCompile Include="Renderers\Renderer.cpp" />
+    <ClCompile Include="Scene Elements\Camera.cpp" />
     <ClCompile Include="Scene Elements\SceneElement.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -190,6 +191,7 @@
     <ClInclude Include="Managers\SceneManager.h" />
     <ClInclude Include="Renderers\IrrRenderer.h" />
     <ClInclude Include="Renderers\Renderer.h" />
+    <ClInclude Include="Scene Elements\Camera.h" />
     <ClInclude Include="Scene Elements\SceneElement.h" />
     <ClInclude Include="Stdafx.h" />
     <ClInclude Include="Utils\Config.h" />
