--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -198,6 +198,7 @@
     <ClInclude Include="Utils\Header.h" />
     <ClInclude Include="Utils\IOUtils.h" />
     <ClInclude Include="Utils\Thread.h" />
+    <ClInclude Include="Utils\Types\Color4.h" />
     <ClInclude Include="Utils\Types\Quaternion.h" />
     <ClInclude Include="Utils\Types\Vector3.h" />
     <ClInclude Include="Utils\Utils.h" />
