--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="Renderers\IrrRenderer.cpp" />
     <ClCompile Include="Renderers\Renderer.cpp" />
     <ClCompile Include="Scene Elements\Camera.cpp" />
+    <ClCompile Include="Scene Elements\Light.cpp" />
     <ClCompile Include="Scene Elements\SceneElement.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -192,6 +193,7 @@
     <ClInclude Include="Renderers\IrrRenderer.h" />
     <ClInclude Include="Renderers\Renderer.h" />
     <ClInclude Include="Scene Elements\Camera.h" />
+    <ClInclude Include="Scene Elements\Light.h" />
     <ClInclude Include="Scene Elements\SceneElement.h" />
     <ClInclude Include="Stdafx.h" />
     <ClInclude Include="Utils\Config.h" />
