Add Environment window. Add some shortcuts for Dialog boxes.

--- a/MCS/MCS.csproj
+++ b/MCS/MCS.csproj
@@ -124,6 +124,9 @@
     <Compile Include="Dialogs\TextDialogBox.xaml.cs">
       <DependentUpon>TextDialogBox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MainWindows\EnvironmentWindow.xaml.cs">
+      <DependentUpon>EnvironmentWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainWindows\FindWindow.xaml.cs">
       <DependentUpon>FindWindow.xaml</DependentUpon>
     </Compile>
@@ -135,6 +138,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="MainWindows\ContentWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MainWindows\EnvironmentWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
