Selector class. Detach from events.

--- a/MEngine/MEngine.vcxproj.filters
+++ b/MEngine/MEngine.vcxproj.filters
@@ -15,6 +15,7 @@
     <ClInclude Include="Utils\Types\MColor.h" />
     <ClInclude Include="Scene Elements\MLight.h" />
     <ClInclude Include="Content Elements\MMaterial.h" />
+    <ClInclude Include="Utils\MSelector.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
