--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="Content Elements\ContentElement.cpp" />
     <ClCompile Include="Content Elements\Material.cpp" />
     <ClCompile Include="Content Elements\Mesh.cpp" />
+    <ClCompile Include="Content Elements\Texture.cpp" />
     <ClCompile Include="Managers\ContentManager.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Managers\SceneManager.cpp" />
@@ -184,11 +185,13 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Utils\External\lodepng.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Content Elements\ContentElement.h" />
     <ClInclude Include="Content Elements\Material.h" />
     <ClInclude Include="Content Elements\Mesh.h" />
+    <ClInclude Include="Content Elements\Texture.h" />
     <ClInclude Include="Managers\ContentManager.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Managers\SceneManager.h" />
@@ -199,6 +202,7 @@
     <ClInclude Include="Scene Elements\SceneElement.h" />
     <ClInclude Include="Stdafx.h" />
     <ClInclude Include="Utils\Config.h" />
+    <ClInclude Include="Utils\External\lodepng.h" />
     <ClInclude Include="Utils\Header.h" />
     <ClInclude Include="Utils\IOUtils.h" />
     <ClInclude Include="Utils\Thread.h" />
