Fix some small issues. Log window now stop the timer when it's closed. SnapDropDown didn't hide when selection cursor is set. Cloned scene elements now are named right.

--- a/MCS/MCS.csproj
+++ b/MCS/MCS.csproj
@@ -272,6 +272,9 @@
     <Resource Include="Images\Common\Delete.png" />
     <Resource Include="Images\Common\Rename.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\MainWindow\select.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
