Manipulation of image and settings of Production Renderer in RenderWindow. Implementation of ThreadPool with tasks and futures. Size ints to unsigned ints. SortName for PropertyItems. Regions generation in CPURayRenderer. Fix names of contain functions (to contains).

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -213,7 +213,8 @@
     <ClInclude Include="Utils\External\lodepng.h" />
     <ClInclude Include="Utils\Header.h" />
     <ClInclude Include="Utils\IOUtils.h" />
-    <ClInclude Include="Utils\Thread.h" />
+    <ClInclude Include="Utils\RayUtils.h" />
+    <ClInclude Include="Utils\Types\Thread.h" />
     <ClInclude Include="Utils\Types\Color4.h" />
     <ClInclude Include="Utils\Types\Buffer.h" />
     <ClInclude Include="Utils\Types\Quaternion.h" />
