--- a/External/CodeGenerator/CodeGenerator/CodeGenerator.csproj
+++ b/External/CodeGenerator/CodeGenerator/CodeGenerator.csproj
@@ -58,15 +58,19 @@
   <ItemGroup>
     <Compile Include="CodeGenerator.cs" />
     <Compile Include="Generators\BaseGenerator.cs" />
+    <Compile Include="Generators\GetGenerator.cs" />
     <Compile Include="Generators\InitGenerator.cs" />
     <Compile Include="Generators\Serialization\ReadGenerator.cs" />
     <Compile Include="Generators\Serialization\SizeGenerator.cs" />
     <Compile Include="Generators\Serialization\WriteGenerator.cs" />
+    <Compile Include="Generators\Wrappers\FunctionGenerator.cs" />
     <Compile Include="Generators\Wrappers\PropertyGenerator.cs" />
+    <Compile Include="Infos\Function.cs" />
     <Compile Include="Infos\Member.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Extensions.cs" />
+    <Compile Include="Utils\WrapperTypesUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
