Implement AnimationManager. Fix crash in IrrRenderer caused by texture loading.

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -195,6 +195,7 @@
     <ClCompile Include="Content Elements\Material.cpp" />
     <ClCompile Include="Content Elements\Mesh.cpp" />
     <ClCompile Include="Content Elements\Texture.cpp" />
+    <ClCompile Include="Managers\AnimationManager.cpp" />
     <ClCompile Include="Managers\BaseManager.cpp" />
     <ClCompile Include="Managers\ContentManager.cpp" />
     <ClCompile Include="Engine.cpp" />
@@ -218,6 +219,7 @@
     <ClInclude Include="Content Elements\Material.h" />
     <ClInclude Include="Content Elements\Mesh.h" />
     <ClInclude Include="Content Elements\Texture.h" />
+    <ClInclude Include="Managers\AnimationManager.h" />
     <ClInclude Include="Managers\BaseManager.h" />
     <ClInclude Include="Managers\ContentManager.h" />
     <ClInclude Include="Engine.h" />
